--- a/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
+++ b/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
@@ -1,26 +1,19 @@
 {% extends 'main.html' %} {% block content %}
 <div class="d-flex">
-  <button
-  class="btn btn-sm px-4"
-  data-bs-toggle="collapse"
-  data-bs-target="#collapseFilter"
-  aria-expanded="false"
-  aria-controls="collapseFilter"
-  style="background-color: #419197;font-size:14px;font-weight: 500; color: white;"
-
-  >
+  <button class="btn btn-sm px-4" data-bs-toggle="collapse" data-bs-target="#collapseFilter" aria-expanded="false"
+    aria-controls="collapseFilter" style="background-color: #419197;font-size:14px;font-weight: 500; color: white;">
     Filters
   </button>
 </div>
 
 <div>
   {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
+  {% for m in messages %}
+  <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
+    {{m}}
+    <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  {% endfor %}
   {% endif %}
 </div>
 
@@ -29,9 +22,9 @@
 <div class="bg-light mt-3">
 
   <div class="collapse shadow rounded-2 " id="collapseFilter">
-    <div class="px-2 py-2"> 
+    <div class="px-2 py-2">
       <form class="row" method="GET" action="./hotel_table">
-        
+
         <!-- <div class="form-group col-12">
                   <div class="input-group">
                       <input class="form-control py-2 border-right-0 border" type="search"
@@ -40,34 +33,20 @@
       
                   </div>
               </div> -->
-  
+
         <div class="col-md-3">
           <label for="date_minimum">Calender Date Minimum</label>
-          <input
-            type="date"
-            class="form-control"
-            id="date_minimum"
-            name="date_min"
-          />
+          <input type="date" class="form-control" id="date_minimum" name="date_min" />
         </div>
         <div class="col-md-3">
           <label for="date_maximum">Calender Date Maximum</label>
-          <input
-            type="date"
-            class="form-control"
-            id="date_maximum"
-            name="date_max"
-          />
+          <input type="date" class="form-control" id="date_maximum" name="date_max" />
         </div>
-  
-        
+
+
         <div class="form-group col-md-3">
           <label for="country_category">Country</label>
-          <select
-            id="country_category"
-            class="form-control"
-            name="country_category"
-          >
+          <select id="country_category" class="form-control" name="country_category">
             <option selected>--</option>
             {% for country_category in country_categories %}
             <option value="{{country_category.id}}">{{country_category}}</option>
@@ -76,28 +55,18 @@
         </div>
         <div class="col-md-3">
           <label for="ViewNameOfPlant">Name of the Hotel </label>
-          <input
-            type="text"
-            class="form-control"
-            id="view_hotel_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_hotel"
-          />
+          <input type="text" class="form-control" id="view_hotel_Name" placeholder="e.g. Himalayan"
+            name="name_of_the_hotel" />
         </div>
         <div class="col-md-3">
           <label for="ViewCity">City</label>
-          <input
-            type="text"
-            class="form-control"
-            id="view_city_Name"
-            placeholder="e.g. Himalayan"
-            name="name_of_the_city"
-          />
+          <input type="text" class="form-control" id="view_city_Name" placeholder="e.g. Himalayan"
+            name="name_of_the_city" />
         </div>
         <div class="col-md-3 d-flex align-items-end">
           <button type="submit" class=" btn btn-primary">
             Search
-          </button> 
+          </button>
         </div>
       </form>
     </div>
@@ -121,63 +90,62 @@
           * {{data_len}} records found.
         </span>
         <div class="d-flex align-items-center py-2">
+          <button type="button" class="btn border p-2 styled-link hover-shadow" onclick="updateSelected()">
+            <i class="fa-solid fa-file-pen"></i>
+            <span>Update Selected</span>
+          </button>
           <button type="button" class="btn border p-2 styled-link mx-3 hover-shadow" onclick="confirmDeleteAll()">
             <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
-              <span class="fw-normal">Delete Selected</span>
+            <span class="fw-normal">Delete Selected</span>
           </button>
-            <a
-              href="{% url 'export_hotel_table_to_excel' %}?{{ request.GET.urlencode }}"
-              class="border p-2 styled-link"
-            >
+          <a href="{% url 'export_hotel_table_to_excel' %}?{{ request.GET.urlencode }}" class="border p-2 styled-link">
             <i class="fa-solid fa-table"></i>
             <span class="fw-normal">Export to Excel</span>
-            </a>
+          </a>
         </div>
       </div>
       <table class="table table-striped table-bordered table-sm">
         <thead>
           <tr>
-            <th class="text-white fw-semibold fs-6  " scope="col"  style="background:#12486B;">
-              <input
-              type="checkbox"
-              id="select-all"
-              onclick="toggleSelectAll()"
-            />
+            <th class="text-white fw-semibold fs-6  " scope="col" style="background:#12486B;">
+              <input type="checkbox" id="select-all" onclick="toggleSelectAll()" />
             </th>
-            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class="text-white fst-normal " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
               Year
             </th>
-            <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
+            <th class="text-white fst-normal  " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
               Country
             </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Name_Of_The_Hotel
+            <th class=" text-white fst-normal  " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
+              Name_Of_The_Hotel
             </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Capacity_room
+            <th class=" text-white fst-normal  " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
+              Capacity_room
             </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Occupancy_In_Year
+            <th class=" text-white fst-normal " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
+              Occupancy_In_Year
             </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                City
+            <th class=" text-white fst-normal " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
+              City
             </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Action
+            <th class=" text-white fst-normal " scope="col"
+              style="font-size:14px; font-weight: 500; background: #12486B;">
+              Action
             </th>
           </tr>
         </thead>
-    
+
         <tbody class="table-hover">
           {% for record in page %}
           <tr>
             <td class=" text-white fw-semibold fs-6" scope="col">
-              <input
-              type="checkbox"
-              class="item-checkbox"
-              name="selected_items"
-              value="{{ record.id }}"
-            />
+              <input type="checkbox" class="item-checkbox" name="selected_items" value="{{ record.id }}" />
             </td>
             <td>{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
@@ -187,29 +155,112 @@
             <td>{{ record.City }}</td>
             <td class="d-flex">
               <div class="btn">
-                <a
-                  class=""
-                  id="delete_hotel"
-                  onclick="confirmDelete('{{record.id}}')"
-                  ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
-                  
-              </div>
-    
-              <div class="btn ">
-                <a
-                  class=""
-                  href="{% url 'update_hotel_record' record.id %}"
+                <a class="" id="delete_hotel" onclick="confirmDelete('{{record.id}}')"><i
+                    class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
 
-                  ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
+              </div>
+
+              <div class="btn ">
+                <a class="" href="{% url 'update_hotel_record' record.id %}"><i class="fa-regular fa-pen-to-square"
+                    style="color: rgb(3, 10, 86)"></i></a>
               </div>
             </td>
           </tr>
-    
+
           {% endfor %}
         </tbody>
       </table>
     </div>
+    <div class="pagination m-3 d-flex justify-content-center">
+      <span class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3">
+        {% if page.has_previous %}
+        <a href="?page=1
+                  {% if request.GET.country %}
+                      &country={{ request.GET.country }}
+                  {% endif %}
+                  {% if request.GET.year_min %}
+                      &year_min={{ request.GET.year_min }}
+                  {% endif %}
+                  {% if request.GET.year_max %}
+                      &year_max={{ request.GET.year_max }}
+                  {% endif %}
+                  {% if request.GET.name %}
+                      &name={{ request.GET.name }}
+                  {% endif %}
+                  {% if request.GET.city %}
+                      &city={{ request.GET.city }}
+                  {% endif %}
+                  ">
+          &laquo; First
+        </a>
+        <a href="?page={{page.previous_page_number}}
+                  {% if request.GET.country %}
+                      &country={{ request.GET.country }}
+                  {% endif %}
+                  {% if request.GET.year_min %}
+                      &year_min={{ request.GET.year_min }}
+                  {% endif %}
+                  {% if request.GET.year_max %}
+                      &year_max={{ request.GET.year_max }}
+                  {% endif %}
+                  {% if request.GET.name %}
+                      &name={{ request.GET.name }}
+                  {% endif %}
+                  {% if request.GET.city %}
+                      &city={{ request.GET.city }}
+                  {% endif %}
+                  ">
+          Previous
+        </a>
+        {% endif %}
+
+        <span class="current-page">
+          Page {{ page.number }} of {{ page.paginator.num_pages }}.
+        </span>
+
+        {% if page.has_next %}
+        <a href="?page={{page.next_page_number}}
+                  {% if request.GET.country %}
+                      &country={{ request.GET.country }}
+                  {% endif %}
+                  {% if request.GET.year_min %}
+                      &year_min={{ request.GET.year_min }}
+                  {% endif %}
+                  {% if request.GET.year_max %}
+                      &year_max={{ request.GET.year_max }}
+                  {% endif %}
+                  {% if request.GET.name %}
+                      &name={{ request.GET.name }}
+                  {% endif %}
+                  {% if request.GET.city %}
+                      &city={{ request.GET.city }}
+                  {% endif %}
+                  ">
+          Next
+        </a>
+        <a href="?page={{ page.paginator.num_pages }}
+                  {% if request.GET.country %}
+                      &country={{ request.GET.country }}
+                  {% endif %}
+                  {% if request.GET.year_min %}
+                      &year_min={{ request.GET.year_min }}
+                  {% endif %}
+                  {% if request.GET.year_max %}
+                      &year_max={{ request.GET.year_max }}
+                  {% endif %}
+                  {% if request.GET.name %}
+                      &name={{ request.GET.name }}
+                  {% endif %}
+                  {% if request.GET.city %}
+                      &city={{ request.GET.city }}
+                  {% endif %}
+                  ">
+          Last &raquo;
+        </a>
+        {% endif %}
+      </span>
     </div>
+
   </form>
 </div>
 
@@ -219,28 +270,33 @@
 
 <script>
   function confirmDelete(itemId) {
-      var result = confirm("Are you sure you want to delete this record?");
-      if (result) {
-          // User clicked "OK"
-          // Redirect to the Django view for deleting the item
-          window.location.href = 'delete_hotel_record/' + itemId + '/';
-      } else {
-          // User clicked "Cancel" or closed the dialog
-          alert("Delete canceled!");
-      }
+    var result = confirm("Are you sure you want to delete this record?");
+    if (result) {
+      // User clicked "OK"
+      // Redirect to the Django view for deleting the item
+      window.location.href = 'delete_hotel_record/' + itemId + '/';
+    } else {
+      // User clicked "Cancel" or closed the dialog
+      alert("Delete canceled!");
+    }
   }
 
+  function updateSelected(itemId) {
+        document.getElementById("delete-form-hotel").action = "{% url 'update_selected_hotel' %}";
+        document.getElementById("delete-form-hotel").submit();
+    }
+
   function confirmDeleteAll() {
-        var confirmDelete = confirm(
-          "Are you sure you want to delete all selected items?"
-        );
-        if (confirmDelete) {
-          document.getElementById("delete-form-hotel").submit();
-        }
-      }
-  
+    var confirmDelete = confirm(
+      "Are you sure you want to delete all selected items?"
+    );
+    if (confirmDelete) {
+      document.getElementById("delete-form-hotel").submit();
+    }
+  }
 
 
-  </script>
-  
+
+</script>
+
 {% endblock %}
