--- a/databank/general_data/templates/general_data/population_templates/population_table.html
+++ b/databank/general_data/templates/general_data/population_templates/population_table.html
@@ -1,5 +1,6 @@
 {% extends 'main.html' %} {% block content %}
-<div class="d-flex">
+{% load custom_filters %}
+
   <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
@@ -11,19 +12,6 @@
   >
     Filters
   </button>
-</div>
-
-<div>
-  {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-</div>
-
 
 
 <div class="bg-light mt-3">
@@ -113,7 +101,10 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center">Population Data</div>
+<div class="d-flex justify-content-center">
+  <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+      href="{% url 'population_table' %}">Population Data</a>
+</div>
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
   No Records
@@ -166,7 +157,7 @@
                 Gender
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Age_Group
+                Age Group
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Population
