--- a/databank/general_data/templates/general_data/land_templates/land_table.html
+++ b/databank/general_data/templates/general_data/land_templates/land_table.html
@@ -1,5 +1,5 @@
 {% extends 'main.html' %} {% block content %}
-<div class="d-flex">
+
   <button
   class="btn btn-sm px-4"
   data-bs-toggle="collapse"
@@ -11,20 +11,6 @@
   >
     Filters
   </button>
-</div>
-
-<div>
-  {% if messages %}
-    {% for m in messages %}
-      <div class="alert alert-success px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
-        {{m}}
-        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    {% endfor %}
-  {% endif %}
-</div>
-
-
 
 <div class="bg-light mt-3">
 
@@ -115,7 +101,11 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center">Land Data</div>
+
+<div class="d-flex justify-content-center">
+  <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+      href="{% url 'land_table' %}">Land Data</a>
+</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
