fix column names

--- a/databank/general_data/templates/general_data/transport_templates/transport_table.html
+++ b/databank/general_data/templates/general_data/transport_templates/transport_table.html
@@ -156,10 +156,10 @@
               Country
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Transpoort_Classification_Code
+                Transport Classification Code
             </th>
             <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Quantity_In_Metric_Ton
+                Quantity In Metric Ton
             </th>
             <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Quantity
