--- a/databank/trade_data/templates/trade_data/display_trade_table.html
+++ b/databank/trade_data/templates/trade_data/display_trade_table.html
@@ -123,7 +123,11 @@
     </div>
   </div>
 </div>
-<div class="fs-4 fw-bold text-center mt-4">Trade Data</div>
+
+<div class="d-flex justify-content-center">
+  <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+      href="{% url 'display_trade_table' %}">Trade Data</a>
+</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
@@ -131,7 +135,7 @@
 </div>
 {% else %}
 <div>
-  <form method="post" action="{% url 'delete_selected_trade' %}" id="delete-form-trade">
+  <form method="post" action="{% url 'delete_selected_trade' %}" id="delete-form">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
       <div class="d-flex align-items-center justify-content-between px-2">
@@ -140,6 +144,10 @@
         </span>
 
         <div class="d-flex align-items-center py-2">
+          <button type="button" class="btn border p-2 styled-link hover-shadow" onclick="updateSelected()">
+            <i class="fa-solid fa-file-pen"></i>
+            <span>Update Selected</span>
+        </button>
           <button type="button" class="btn border p-2 styled-link mx-3 hover-shadow" onclick="confirmDeleteAll()">
             <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
               <span>Delete Selected</span>
@@ -165,25 +173,25 @@
                 />
               </th>
               <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
-                Trade_Types
+                Trade Types
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" scope="col">
                 Calender
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
-                Fiscal_Year
+                Fiscal Year
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
                 Duration
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
-                Country_Name
+                Country Name
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
-                HS_Code
+                HS Code
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
-                Product_Information
+                Product Information
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
                 Unit
@@ -192,7 +200,7 @@
                 Quantity
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
-                Currency_Type
+                Currency Type
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
                 Amount
@@ -201,10 +209,10 @@
                 Tarrif
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
-                Origin_Destination
+                Origin Destination
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
-                TradersName_ExporterImporter
+                TradersName ExporterImporter
               </th>
               <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
                 Documents
@@ -302,6 +310,10 @@
 </div>
 
 <script>
+  function updateSelected(itemId) {
+        document.getElementById("delete-form").action = "{% url 'update_selected_trade' %}";
+        document.getElementById("delete-form").submit();
+    }
     function confirmDelete(itemId) {
       var result = confirm("Are you sure you want to delete this record?");
       if (result) {
