fix hotel table column names

--- a/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
+++ b/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
@@ -109,15 +109,15 @@
             </th>
             <th class=" text-white fst-normal  " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
-              Name_Of_The_Hotel
+              Name Of The Hotel
             </th>
             <th class=" text-white fst-normal  " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
-              Capacity_room
+              Capacity Room
             </th>
             <th class=" text-white fst-normal " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
-              Occupancy_In_Year
+              Occupancy In Year
             </th>
             <th class=" text-white fst-normal " scope="col"
               style="font-size:14px; font-weight: 500; background: #12486B;">
