center align column names

--- a/databank/general_data/templates/general_data/water_templates/water_table.html
+++ b/databank/general_data/templates/general_data/water_templates/water_table.html
@@ -162,28 +162,28 @@
               onclick="toggleSelectAll()"
             />
             </th>
-            <th class="text-white fst-normal align-middle" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class="text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
               Year
             </th>
-            <th class="text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
+            <th class="text-white fst-normal align-middle text-center " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
               Country
             </th>
-            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle text-center " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
               Code Type
             </th>
-            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Description
             </th>
-            <th class=" text-white fst-normal align-middle" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Unit
             </th>
-            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Volume In Cubic Meter
             </th>
-            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
               Name Of The River
             </th>
-            <th class=" text-white fst-normal align-middle" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
             </th>
           </tr>
