fix export data column names

--- a/databank/general_data/templates/general_data/water_templates/water_table.html
+++ b/databank/general_data/templates/general_data/water_templates/water_table.html
@@ -169,7 +169,7 @@
               Country
             </th>
             <th class=" text-white fst-normal align-middle text-center " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-              Code Type
+              Water Type Code
             </th>
             <th class=" text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Description
