add code description to table

--- a/databank/general_data/templates/general_data/water_templates/water_table.html
+++ b/databank/general_data/templates/general_data/water_templates/water_table.html
@@ -171,6 +171,9 @@
             <th class=" text-white fst-normal align-middle text-center " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
               Water Type Code
             </th>
+            <th class=" text-white fst-normal align-middle text-center " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+              Water Type 
+            </th>
             <th class=" text-white fst-normal align-middle text-center" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Description
             </th>
@@ -203,6 +206,7 @@
             <td >{{ record.Year }}</td>
             <td>{{ record.Country }}</td>
             <td>{{ record.Water_Type_Code.Code }}</td>
+            <td>{{ record.Water_Type_Code.Water_Type }}</td>
             <td>{{ record.Description }}</td>
             <td>{{ record.Unit }}</td>
             <td>{{ record.Volume }}</td>
